Load tags along with corresponding task